world-tests - fixing